# DominionNode

./: .gitignore  CMakeLists.txt  LICENSE  README.md  sdkconfig.old
components/app/: CMakeLists.txt  app.c
components/app/include/: app.h
components/buttons/: CMakeLists.txt  buttons.c
components/buttons/include/: buttons.h
components/buzzer/: CMakeLists.txt  buzzer.c
components/buzzer/include/: buzzer.h
components/chrono/: CMakeLists.txt  chrono.c
components/chrono/include/: chrono.h
components/display/: CMakeLists.txt  display.c
components/display/include/: display.h
components/error_signaling/: CMakeLists.txt  error_signaling.c
components/error_signaling/include/: error_signaling.h
components/http_server/: CMakeLists.txt  http_server.c
components/http_server/include/: http_server.h
components/leds/: CMakeLists.txt  leds.c
components/leds/include/: leds.h
components/settings/: CMakeLists.txt  settings.c
components/settings/include/: settings.h
components/settings_types/: CMakeLists.txt  settings_types.c
components/settings_types/include/: settings_types.h
components/storage/: CMakeLists.txt  storage.c
components/storage/include/: storage.h
components/tm1637/: CMakeLists.txt
components/wifi/: CMakeLists.txt  wifi.c
components/wifi/include/: wifi.h
config/: config.h
main/: CMakeLists.txt  main.c
